# group3-capstone-ios-backend-1

./: .env  .gitignore  README.md  dev  dev.bat  pyproject.toml
.github/workflows/: release.yml
app/: asgi.py  settings.py  settings_build.py  settings_dev.py  settings_online_dev.py  urls.py  wsgi.py
backend/account/: apps.py  urls.py
backend/account/restful/: auth.py  signup.py
backend/account/serializers/: auth.py
backend/account/utils/: password_check.py
backend/photos/: apps.py  models.py  urls.py
backend/photos/migrations/: 0001_initial.py  0002_alter_photos_table.py  0003_photos_url.py  0004_photos_position.py  0005_photos_thumb_url.py
backend/photos/restful/: photos.py
backend/photos/serializers/: photos.py
backend/utils/: pagination.py
docker/: .dockerignore  Dockerfile  app_all.spec  backup-db.sh  docker-compose.dev.yml  docker-entrypoint-migrate.sh  docker-entrypoint.sh  pgadmin4-servers.json  pyi_rth_django.py  restore-postgis.sh  site.conf
k8s/: deployment.backend.yaml  ingressroute.yaml  job.db-migrate.yaml  job.test.backend.yaml  service.backend.yaml
